Ensure high contrast in colours

--- a/tech-demo/sample-bfs/styles.css
+++ b/tech-demo/sample-bfs/styles.css
@@ -37,19 +37,19 @@ code[class*="language-"] {
 }
 
 /* Light mode */
-.token.comment { color: #5f6771 !important; }
+.token.comment { color: #454c55 !important; }
 .token.punctuation { color: var(--page-text) !important; }
 .token.keyword, .token.operator { color: #8e121e !important; }
 .token.string { color: #042347 !important; }
-.token.function { color: #6c3bc6 !important; }
-.token.number { color: #1072b7 !important; }
+.token.function { color: #541dba !important; }
+.token.number { color: #0d592e !important; }
 .token.class-name { color: #82441a !important; }
 
 /* Dark mode */
-[data-theme="dark"] .token.comment { color: #8994a1 !important; }
+[data-theme="dark"] .token.comment { color: #aab1b8 !important; }
 [data-theme="dark"] .token.punctuation { color: var(--page-text) !important; }
 [data-theme="dark"] .token.keyword, [data-theme="dark"] .token.operator { color: #f97583 !important; }
 [data-theme="dark"] .token.string { color: #98c1ef !important; }
-[data-theme="dark"] .token.function { color: #ad89f0 !important; }
-[data-theme="dark"] .token.number { color: #71b7f4 !important; }
+[data-theme="dark"] .token.function { color: #b493f2 !important; }
+[data-theme="dark"] .token.number { color: #71f49f !important; }
 [data-theme="dark"] .token.class-name { color: #fc9d5a !important; }
